--- a/Bokeh-Platform/views/home_body.html
+++ b/Bokeh-Platform/views/home_body.html
@@ -3,7 +3,7 @@
 	<div id="content">
 		<div class="post">
 			<div class="title">
-				<h2><a href="{$root_path}index.php">Welcome on Bokeh Platform site</a></h2>
+				<h2><a href="{bp_path c="default" p="index"}">Welcome on Bokeh Platform site</a></h2>
 			</div>
 			<div class="entry">
 				This is an example web page, for the new Bokeh Platform installation.
