--- a/Bokeh-Platform/views/simple.html
+++ b/Bokeh-Platform/views/simple.html
@@ -44,7 +44,7 @@
 		<p>{$template_html}</p>
 		
 		<p style="text-align: right"><em>
-		Powered by <a href="http://{$bokeh_site}/">Bokeh Teknology</a>, 2009, 2012<br />
+		Powered by <a href="http://www.bokehteknology.net/">Bokeh Platform</a>, 2009, 2012<br />
 		{$debug_info}
 		</em></p>
 	</body>
