--- a/Bokeh-Platform/views/footer.html
+++ b/Bokeh-Platform/views/footer.html
@@ -10,8 +10,8 @@
 	</p>
 	<p class="legal">
 		<!-- Don't remove Bokeh Platform copyright! -->
-		Powered by <a href="http://{$bokeh_site}/">Bokeh Platform</a>, &copy; 2009, 2012<br />
-		Style &raquo;{$tpl_name} by <a href="{$tpl_website}">{$tpl_author}</a>, based on "Concrete" template.<br />
+		Powered by <a href="http://www.bokehteknology.net/">Bokeh Platform</a>, &copy; 2009, 2012<br />
+		Style based on "Concrete" template.<br />
 		{$debug_info}
 	</p>
 </div>
