--- a/Bokeh-Platform/plugins/plugin_manager/views/footer.html
+++ b/Bokeh-Platform/plugins/plugin_manager/views/footer.html
@@ -39,7 +39,7 @@
 <!-- Footer -->
 <div id="footer">
 	<div class="shell">
-		<span class="left">Powered by <a href="http://www.bokehteknology.net/">Bokeh Teknology</a>, &copy; 2012 | {$debug_info}</span>
+		<span class="left">Powered by <a href="http://www.bokehteknology.net/">Bokeh Teknology</a>, &copy; 2012 {if $debug_info != ''}| {$debug_info}{/if}</span>
 		<span class="right">
 			Design by <a href="http://chocotemplates.com" target="_blank" title="The Sweetest CSS Templates WorldWide">Chocotemplates.com</a>
 		</span>
